update to version 2, added more deps, fix issue #1, #2

--- a/app.html
+++ b/app.html
@@ -3,8 +3,11 @@
   <head>
     <title>NW Base</title>
 		<meta charset="UTF-8">
+	  <!-- Style Libraries -->
 	  <link rel="stylesheet" href="bower_components/uikit/css/uikit.almost-flat.min.css" />
-	  <link rel="stylesheet" href="styles/main.css"/>
+	  <link rel="stylesheet" href="styles/base.css"/>
+
+	  <!-- Core Libraries -->
 	  <script type="text/javascript" src="lib/menus/init.js"></script>
 	  <script type="text/javascript" src="lib/menus/file.js"></script>
 	  <script type="text/javascript" src="lib/menus/help.js"></script>
@@ -12,7 +15,10 @@
 	  <script type="text/javascript" src="bower_components/underscore/underscore-min.js"></script>
 	  <script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
 	  <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+	  <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
 	  <script type="text/javascript" src="bower_components/uikit/js/uikit.min.js"></script>
+
+	  <!-- App Libraries -->
 	  <script type="text/javascript" src="app.js"></script>
   </head>
   <body ng-app="nwbase">
