--- a/src/app.html
+++ b/src/app.html
@@ -2,24 +2,24 @@
 <html>
   <head>
     <title>NW Base</title>
-		<meta charset="UTF-8">
-	  <!-- Style Libraries -->
-	  <link rel="stylesheet" href="bower_components/uikit/css/uikit.almost-flat.min.css" />
-	  <link rel="stylesheet" href="styles/base.css"/>
+    <meta charset="UTF-8">
+    <!-- Style Libraries -->
+    <link rel="stylesheet" href="bower_components/uikit/css/uikit.almost-flat.min.css"/>
+    <link rel="stylesheet" href="styles/base.css"/>
 
-	  <!-- Core Libraries -->
-	  <script type="text/javascript" src="lib/menus/init.js"></script>
-	  <script type="text/javascript" src="lib/menus/file.js"></script>
-	  <script type="text/javascript" src="lib/menus/help.js"></script>
-	  <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-	  <script type="text/javascript" src="bower_components/underscore/underscore-min.js"></script>
-	  <script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
-	  <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-	  <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
-	  <script type="text/javascript" src="bower_components/uikit/js/uikit.min.js"></script>
+    <!-- Core Libraries -->
+    <script src="lib/windows.js"></script>
+    <script src="lib/menus.js"></script>
+    <script src="lib/menubar.js"></script>
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="bower_components/underscore/underscore-min.js"></script>
+    <script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="bower_components/uikit/js/uikit.min.js"></script>
 
-	  <!-- App Libraries -->
-	  <script type="text/javascript" src="app.js"></script>
+    <!-- App Libraries -->
+    <script type="text/javascript" src="app.js"></script>
   </head>
   <body ng-app="nwbase">
     <h1>NW Base</h1>
