--- a/src/app.html
+++ b/src/app.html
@@ -29,83 +29,7 @@
   </head>
   <body ng-app="nwbase">
 
-    <div ng-controller="MainController as main" class="main-frame">
-      <header class="window-header">
-        <a href="#" ng-click="main.close($event)" class="close">
-          <i class="fa fa-times"></i>
-        </a>
-        <h1 class="title">Welcome to nwBase</h1>
-      </header>
-
-      <div class="content">
-        <kendo-button class="k-primary">Click me</kendo-button>
-
-        <ul>
-          <li>
-            <input type="checkbox" id="eq1" class="k-checkbox" checked="checked">
-            <label class="k-checkbox-label" for="eq1">Rear side airbags</label>
-          </li>
-          <li>
-            <input type="checkbox" id="eq2" class="k-checkbox" checked="checked">
-            <label class="k-checkbox-label" for="eq2">Leather trim</label>
-          </li>
-        </ul>
-
-        <select kendo-combo-box
-                style="width: 300px;" >
-          <option>Albania</option>
-          <option>Andorra</option>
-          <option>Armenia</option>
-          <option>Austria</option>
-          <option>Azerbaijan</option>
-          <option>Belarus</option>
-          <option>Belgium</option>
-          <option>Bosnia & Herzegovina</option>
-          <option>Bulgaria</option>
-          <option>Croatia</option>
-          <option>Cyprus</option>
-          <option>Czech Republic</option>
-          <option>Denmark</option>
-          <option>Estonia</option>
-          <option>Finland</option>
-          <option>France</option>
-          <option>Georgia</option>
-          <option>Germany</option>
-          <option>Greece</option>
-          <option>Hungary</option>
-          <option>Iceland</option>
-          <option>Ireland</option>
-          <option>Italy</option>
-          <option>Kosovo</option>
-          <option>Latvia</option>
-          <option>Liechtenstein</option>
-          <option>Lithuania</option>
-          <option>Luxembourg</option>
-          <option>Macedonia</option>
-          <option>Malta</option>
-          <option>Moldova</option>
-          <option>Monaco</option>
-          <option>Montenegro</option>
-          <option>Netherlands</option>
-          <option>Norway</option>
-          <option>Poland</option>
-          <option>Portugal</option>
-          <option>Romania</option>
-          <option>Russia</option>
-          <option>San Marino</option>
-          <option>Serbia</option>
-          <option>Slovakia</option>
-          <option>Slovenia</option>
-          <option>Spain</option>
-          <option>Sweden</option>
-          <option>Switzerland</option>
-          <option>Turkey</option>
-          <option>Ukraine</option>
-          <option>United Kingdom</option>
-          <option>Vatican City</option>
-        </select>
-      </div>
-    </div>
+    <div ng-controller="MainController as main" style="height: 100%" ng-include="'ui/main_frame.html'"></div>
 
   </body>
 </html>
